Fixed spacing issue for articles with more than one district

--- a/themes/kent-news/typography.css
+++ b/themes/kent-news/typography.css
@@ -22,7 +22,6 @@ body, pre {color:#000; font-size:12px; margin:8px;}
     margin: 0 -3px 15px 0;
     overflow: hidden;
     padding: 0 0 12px;
-	width: 100%
 }
 
 #block-content h2,
